[package]
name = "advent-of-code-2020"
version = "0.1.0"
authors = ["Matt Moriarity <matt@mattmoriarity.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "6"
itertools = "0.9"
enumflags2 = "0.7.0-preview1"
bmp = "0.5"